--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTAwMjYwNjk3NjM1MTYwNDc3Ng.GYiq1h.RNOaOvWN2H99GmLyE_1QFgkicotRf_oTLBddXQ
+TOKEN=MTAwMjYwNjk3NjM1MTYwNDc3Ng.GfUDIL.FlBZzzbHstxq2YAMoDuy0b2QBj6SIs1sJiazeQ
